# twinfiles

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pixi.toml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: release.yaml
twinfiles/: __main__.py  finder.py
