[metadata]
name = twinfiles
description = Create the skeleton for a python package/project
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/twinfiles
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    twinfiles = twinfiles.__main__:main
